tests/errors/error_division.nimmy
# This script should fail with a division by zero error
let x = 10 / 0
echo x